cilium-monitoring/prometheus/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: cilium-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      name: prometheus-main
    spec:
      containers:
        - args:
            - --config.file=/etc/prometheus/prometheus.yaml
            - --storage.tsdb.path=/prometheus/
            - --log.level=info
            - --enable-feature=exemplar-storage
          image: "prom/prometheus:v3.3.1"
          imagePullPolicy: IfNotPresent
          name: prometheus
          ports:
            - containerPort: 9090
              name: webui
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/prometheus
              name: config-volume
              readOnly: true
            - mountPath: /prometheus/
              name: prometheus-claim0
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: prometheus-k8s
      volumes:
        - configMap:
            name: prometheus
          name: config-volume
        - name: prometheus-claim0
          persistentVolumeClaim:
            claimName: prometheus-claim0
